# OpenSalesClaw

./: .env.example  .gitignore  FEATURES.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260303_a8f3c2e1b4d0_initial_schema.py  20260304_b2e5d9f1a3c7_add_opportunities_cases_roles.py  20260304_c3f6e0a2b1d8_add_case_number_seq.py  20260304_d4a7b0c5e6f9_add_custom_objects.py
backend/app/: main.py  seed.py
backend/app/api/: accounts.py  auth.py  cases.py  contacts.py  custom_field_definitions.py  custom_objects.py  leads.py  opportunities.py  roles.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  pagination.py  security.py
backend/app/models/: __init__.py  account.py  base.py  case.py  contact.py  custom_field_definition.py  custom_object.py  lead.py  opportunity.py  role.py  user.py
backend/app/schemas/: account.py  base.py  case.py  contact.py  custom_field_definition.py  custom_object.py  lead.py  opportunity.py  role.py  user.py
backend/app/services/: account.py  base.py  case.py  contact.py  custom_field_definition.py  custom_object.py  lead.py  opportunity.py  role.py  user.py
backend/tests/: conftest.py  helpers.py  test_seed.py
backend/tests/api/: test_accounts.py  test_auth.py  test_cases.py  test_contacts.py  test_custom_field_definitions.py  test_custom_objects.py  test_leads.py  test_opportunities.py  test_roles.py  test_users.py
backend/tests/services/: test_user.py
(+69 files in other folders)
